fix: add overflow-hidden class to Hero section and enable horizontal scrolling for KaTeX display

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,3 +110,7 @@ i.emoji {
   font-style: normal !important;
   vertical-align: middle;
 }
+
+.katex-display {
+    @apply overflow-x-auto;
+}
